fixed landscape alignment issue --Raging--

--- a/css/home_stylesheet.css
+++ b/css/home_stylesheet.css
@@ -570,12 +570,10 @@ body {
     .schedule {
         height: 70px;
     }
-    #sportTitle {
-        font-size: 20pt;
+    .scheduleData {
+        top: 5px;
     }
-    #dateTime {
-        font-size: 10pt;
-    }
+    
 }
     
 
